# api-eh/app/controllers/external/playlists_controller.rb
@@ -60,6 +60,8 @@ class External::PlaylistsController < ApplicationController
     else
       raise ActiveRecord::RecordNotFound
     end
+    @order = params[:itemOrder] || 'desc'
+    render json: { message: '無効なパラメーターが指定されています' }, status: 400 and return unless %w[asc desc].include?(order)
 
     @object_type = params[:type] || 'tvepisode'
     @area = params[:area]
